fixtures/solidity/translated_semantic_tests/errors/require_inherited_error/require_inherited_error.sol
contract Base
{
    error CustomError(uint256, string, uint256);
}
contract C is Base
{
    function f() external pure
    {
        require(false, CustomError(1, "two", 3));
    }
}